# mars-hopper

./: CMakeLists.txt  achievements.txt  main.cpp
src/entities/: AchievementManager.cpp  AchievementManager.h  Engine.cpp  Engine.h  Flame.cpp  Flame.h  FuelIndicator.cpp  FuelIndicator.h  GameBackground.cpp  GameBackground.h  Hopper.cpp  Hopper.h  Landscape.cpp  Landscape.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  Meteorite.cpp  Meteorite.h  MiniMap.cpp  MiniMap.h  PassedPlatforms.cpp  PassedPlatforms.h  Platform.cpp  Platform.h  RepairKitIndicator.cpp  RepairKitIndicator.h  SafetyFactor.cpp  SafetyFactor.h  Screen.cpp  Screen.h  Settings.cpp  Settings.h  Speedometer.cpp  Speedometer.h  Vehicle.cpp  Vehicle.h
src/game/: Game.cpp  Game.h
src/utils/: Constants.h  GameDifficulty.h  GameState.h  LoadFont.cpp  LoadFont.h  LoadTexture.cpp  LoadTexture.h  RandomGenerator.cpp  RandomGenerator.h  Size.h  TextureLoader.cpp  TextureLoader.h  constants.h  loadFont.cpp  loadSound.cpp  loadTexture.cpp  randomGenerator.cpp  utils.cpp
